<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/back_icon"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextContent.TitleMedium.Bold.Light"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/detail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <ImageView
                android:id="@+id/iv_prodi_detail"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:background="@drawable/rounded_shape"
                android:clipToOutline="true"
                android:padding="16dp"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute,ImageContrastCheck"
                tools:src="@drawable/d3_ti" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_nama_prodi"
                            style="@style/TextContent.BodyMedium.Bold"
                            android:layout_marginTop="4dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:text="@string/nama_prodi" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_item_nama_prodi"
                            style="@style/TextContent.BodyMedium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:singleLine="false"
                            android:ellipsize="end"
                            android:layout_marginTop="4dp"
                            android:text="@string/nama_prodi" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_jenjang"
                            style="@style/TextContent.BodyMedium.Bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:layout_marginTop="10dp"
                            android:text="@string/jenjang" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_item_jenjang"
                            style="@style/TextContent.BodyMedium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:singleLine="false"
                            android:ellipsize="end"
                            android:layout_marginTop="4dp"
                            android:text="@string/jenjang" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_sk_selenggara"
                            style="@style/TextContent.BodyMedium.Bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:layout_marginTop="10dp"
                            android:text="@string/sk_selenggara" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_item_sk_selenggara"
                            style="@style/TextContent.BodyMedium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:singleLine="false"
                            android:ellipsize="end"
                            android:layout_marginTop="4dp"
                            android:text="@string/sk_selenggara" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_tgl_berdiri"
                            style="@style/TextContent.BodyMedium.Bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:layout_marginTop="10dp"
                            android:text="@string/tgl_sk_selenggara" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_item_tgl_berdiri"
                            style="@style/TextContent.BodyMedium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:singleLine="false"
                            android:ellipsize="end"
                            android:layout_marginTop="4dp"
                            android:text="@string/tgl_berdiri" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_akreditasi"
                            style="@style/TextContent.BodyMedium.Bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:layout_marginTop="10dp"
                            android:text="@string/akreditasi" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_item_akreditasi"
                            style="@style/TextContent.BodyMedium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:singleLine="false"
                            android:ellipsize="end"
                            android:layout_marginTop="4dp"
                            android:text="@string/akreditasi" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_prodi_detail"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/informasi_umum"
                    style="@style/TextContent.TitleLarge.Bold"/>

                <TextView
                    android:id="@+id/tv_informasi_umum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextContent.BodyMedium"
                    android:text="@string/deskripsi"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/ilmu_yg_dipelajari"
                    style="@style/TextContent.TitleLarge.Bold"/>

                <TextView
                    android:id="@+id/tv_ilmu_yg_dipelajari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextContent.BodyMedium"
                    android:text="@string/deskripsi"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/kompetensi"
                    style="@style/TextContent.TitleLarge.Bold"/>

                <TextView
                    android:id="@+id/tv_kompetensi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextContent.BodyMedium"
                    android:text="@string/deskripsi"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:backgroundTint="@color/blue_pastel"
            android:src="@drawable/icon_share"
            app:borderWidth="0dp"
            app:tint="@color/white"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>